--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^2.0.5",
+    "aws-amplify": "^4.3.11",
     "vue": "^3.2.25"
   },
   "devDependencies": {
